%% Lost & Found and ownership claims
classDiagram
direction LR
class User {
  +int UserID
  +string Username
  +string Role
  +string FirstName
  +string LastName
  +string? ContactNumber
  +bool IsActive
  +string DisplayName
}
class LostFoundItem {
  +int ItemID
  +int ReportedByUserID
  +int? ClaimedByUserID
  +string ItemName
  +string ItemType
  +string? Location
  +string Status
  +DateTime DateReported
  +DateTime? DateClaimed
  +DateTime? ArchivedAt
  +string? ImagePath
}
class ClaimRequest {
  +int ClaimID
  +int ItemID
  +int ClaimantUserID
  +string VerificationDetails
  +DateTime SubmittedAt
  +string Status
  +string? AdminNotes
  +string? ImagePath
}
User "1" -- "0..*" LostFoundItem : reported by
User "0..1" -- "0..*" LostFoundItem : claimed by
LostFoundItem "1" -- "0..*" ClaimRequest : claims
User "1" -- "0..*" ClaimRequest : claimant
